--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-      Контакты в шапке
+        <a class="header-email" href="mailto:lewickbrez@gmail.com">lewickbrez@gmail.com</a>
+        <a class="header-phone" href="tel:+37122053928">+371 22 053 928</a>
       </div>
     </header>
 
@@ -22,6 +23,9 @@
     </section>
 
     <section class="intro">
+      <figure class="user-image">
+        <img src="files/user.jpg" width="928" height="536" alt="Фотография">
+      </figure>      
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
       <h3>Пара слов о себе</h3>
@@ -34,10 +38,12 @@
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
-
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
+      </figure>
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
-
+      <a class="button" href="source/project-gloevk/index.html">Открыть страницу</a>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
       </div>
@@ -45,7 +51,8 @@
 
     <footer class="page-footer">
       <div class="container">
-      Контакты в подвале
+        <a class="footer-email" href="mailto:lewickbrez@gmail.com">lewickbrez@gmail.com</a>
+        <a class="footer-phone" href="tel:+37122053928">+371 22 053 928</a>
     </div>
     </footer>
   </body>
